# AgentShield

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
agentshield/: __init__.py
agentshield/adapters/: __init__.py
agentshield/adapters/claude_code/: __init__.py  installer.py  post_tool.py  pre_tool.py
agentshield/daemon/: __init__.py  server.py  startup.py
agentshield/engine/: __init__.py  core.py  monitor.py  policy.py  scanner.py
agentshield/policy/: __init__.py  defaults.py
agentshield/storage/: __init__.py  db.py  schema.sql
docs/: TRACKING.md  architecture.md  techstack.md  usecases.md
scripts/: create-github-issues.sh
tests/: bench_hook.py  test_adapters.py  test_daemon.py  test_engine.py  test_monitor.py  test_policy.py  test_scanner.py  test_storage.py
