[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Governance and compliance layer for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agentshield = "agentshield.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentshield"]
