[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Governance and compliance layer for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "AgentShield" }]
keywords = ["ai", "agents", "governance", "security", "compliance", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/Eurus7895/AgentShield"
Repository = "https://github.com/Eurus7895/AgentShield"
Issues = "https://github.com/Eurus7895/AgentShield/issues"

[project.scripts]
agentshield = "agentshield.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentshield"]
